--- a/src/FleetPulse.Api/FleetPulse.Api.csproj
+++ b/src/FleetPulse.Api/FleetPulse.Api.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.9" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.2.9" />
   </ItemGroup>
 
 </Project>
